finish the frontend part. Could interact with django rest framework with  CURD operation. Now it's capable of: add, modifiy, remove a todo; sort by priority or deadline; showing items depends on whether finished. Next: make it pretty!

--- a/project/frontend/templates/frontend/index.html
+++ b/project/frontend/templates/frontend/index.html
@@ -11,7 +11,14 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
         crossorigin="anonymous">
-    <title>Django DRF - React : Quickstart - Valentino G. - www.valentinog.com</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box
+        }
+    </style>
+    <title>A not simple To-Do App</title>
 </head>
 
 <body>
